--- a/.github/workflows/.cypress.yml
+++ b/.github/workflows/.cypress.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Run Cypress tests
         run: npx cypress run --browser firefox      
 
-  edge-tests-1:
+  edge-tests-part-1:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -107,7 +107,7 @@ jobs:
           name: cypress-videos
           path: cypress/videos/
 
-    edge-tests-2:
+    edge-tests-part-2:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v4
